<resources>
    <string name="app_name">Basic App</string>
    <string name="welcome_text">Hey, \nLogin Now.</string>
    <string name="icon_desc">icon</string>
    <string name="register_question">If you are new /</string>
    <string name="register_link_text">Create New</string>
    <string name="reset_pass_question">Forgot password? /</string>
    <string name="reset_link">Reset</string>
    <string name="login_btn_text">Login</string>
    <string name="skip_login_link_text">Skip Now</string>
    <string name="login_hint">Login</string>
    <string name="pass_hint">Password</string>
    <string name="welcome_string">Welcome, User! Here you can find a recipe by ingredients you have.</string>
    <string name="search_btn">Search</string>
    <string name="next_ingr">Write next ingredient…</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="add">add</string>
    <string name="point_for_list_item">point for list item</string>
    <string name="your_list">Your list</string>
    <string name="cancel">cancel</string>
    <string name="cooking_time">time to cook</string>
    <string name="ingredients_header">Ingredients</string>
    <string name="steps_title">Steps</string>
    <string name="no_recipe_found_message">No recipe found</string>
    <string name="time_min">%1$dmin</string>
</resources>