<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">


    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18sp"
        android:padding="12dp"
        android:background="@drawable/button_primary"
        />

    <EditText
        android:id="@+id/ingr_edit_text"
        style="@style/EditTextFieldStyle"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="80dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_field"
        android:hint="@string/next_ingr"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <Button
        android:id="@+id/add_ingr_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_primary"
        android:padding="4dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="@+id/ingr_edit_text"
        app:layout_constraintEnd_toEndOf="@id/ingr_edit_text"
        app:layout_constraintTop_toTopOf="@id/ingr_edit_text"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/list_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/your_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingr_edit_text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ingredient_list_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@id/search_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_name_text_view"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_string"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/ingr_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>